--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "proxy": "http://localhost:3090/",
   "dependencies": {
+    "axios": "^0.18.0",
     "cryptiles": "4.1.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
