--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "cryptiles": "4.1.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^7.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.14",
+    "redux": "^4.0.1",
     "webpack-dev-server": "^3.1.11"
   },
   "scripts": {
