--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "axios": "^0.18.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^7.0.0",
     "express": "^4.15.4",
     "express-flash": "^0.0.2",
+    "express-session": "^1.16.1",
     "googleapis": "^39.2.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.4.19",
