--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "cryptiles": "4.1.2",
     "react": "^16.0.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.0.0",
     "react-redux": "^7.0.2",
     "react-router-dom": "^4.3.1",
