--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "googleapis": "^39.2.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.7.5",
+    "multer": "^1.4.2",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-avatar-editor": "^12.0.0-beta.0"
   },
   "engines": {
     "node": "10.x"
