--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
   "proxy": "http://localhost:3090/",
   "dependencies": {
     "axios": "^0.19.0",
+    "cropperjs": "^1.5.6",
     "cryptiles": "4.1.2",
     "react": "^16.0.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-cropper": "^1.3.0",
     "react-dom": "^16.0.0",
     "react-redux": "^7.0.2",
     "react-router-dom": "^4.3.1",
